--- a/ProjectManagmentSystem/src/index.css
+++ b/ProjectManagmentSystem/src/index.css
@@ -11,3 +11,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+.sidebar-container .ps-sidebar-container{
+  color: white;
+  background-color: #0E382F;
+  background-image: linear-gradient(rgba(14, 56, 47, 0.5), rgba(0, 0, 0, 0.5)),url(./assets/Images/w2.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  border-top-right-radius: 50px;
+  & .ps-menu-button{
+    transition: all 0.15s;
+  }
+  & .ps-menu-button:hover{
+    background-color: #00924D1A;
+  }
+}
