Modified changePassword and sidebar code in SideBar.tsx & Finished Navbar.tsx

--- a/ProjectManagmentSystem/src/Modules/SharedModule/components/SideBar/sidebar.module.css
+++ b/ProjectManagmentSystem/src/Modules/SharedModule/components/SideBar/sidebar.module.css
@@ -4,10 +4,17 @@
 }
 
 .inputContainer{
-
   border-bottom: 1px #DEE2E6 solid;
+  /* background-color: red;
+  height: 60px; */
 }
 
 .inputError{
-  border-bottom: 1px #EF9B28 solid;
+  /* border-bottom: 1px #EF9B28 solid; */
+  border-bottom: 1px #FFC107 solid;
 }
+
+.height{
+  height: 80px;
+}
+
