--- a/ProjectManagmentSystem/src/index.css
+++ b/ProjectManagmentSystem/src/index.css
@@ -84,7 +84,7 @@ input:focus{
 
 .form-container input::placeholder{
   font-size: 13px ;
-  font-style: italic;
+  /* font-style: italic; */
   color: rgb(226, 226, 226);
   /* color: rgb(172, 172, 172); */
 }
