--- a/ProjectManagmentSystem/src/App.css
+++ b/ProjectManagmentSystem/src/App.css
@@ -1,4 +1,4 @@
-/* .auth-container {
+ .auth-container {
     background-image: url(/src/assets/images/bg2.png);
     background-position: center;
     background-repeat: no-repeat;
