--- a/ProjectManagmentSystem/src/App.css
+++ b/ProjectManagmentSystem/src/App.css
@@ -2,7 +2,7 @@
     background-image: url(/src/assets/images/bg2.png);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size:cover;
 }
 
 .auth-container-rest {
@@ -10,7 +10,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: auto;
+    
 }
 
 .form-auth {
