--- a/ProjectManagmentSystem/src/Modules/DashboardModule/components/Dashboard/Dashboard.module.css
+++ b/ProjectManagmentSystem/src/Modules/DashboardModule/components/Dashboard/Dashboard.module.css
@@ -5,7 +5,6 @@
     background-color: hsla(35, 86%, 55%, 1) !important;
 }
 .headerContainer{
-    /* background-color: red !important; */
     background-image: url(../../../../assets/images/home-bg.png);
     background-size: cover;
 }
@@ -16,7 +15,7 @@
 .bgTasks{
     background-color: #F4F4E5;
 }
-.bgTasks{
+.bgProjects{
     background-color: #F4E5ED;
 }
 .bgProjectNoicon{
@@ -27,4 +26,11 @@
 }
 .bgProgressicon{
     background-color: #CFD1EC;
+}
+
+.textPadding{
+    font-weight: 500!important;
+    font-size: 13px!important;
+    line-height: 15.73px!important;
+   
 }
