--- a/ProjectManagmentSystem/src/Modules/TasksModule/components/TasksData/TasksData.module.css
+++ b/ProjectManagmentSystem/src/Modules/TasksModule/components/TasksData/TasksData.module.css
@@ -1,11 +1,22 @@
-.btnOrangeColor{
-    background-color: hsla(35, 86%, 55%, 1) !important;
+.btnOrangeColor {
+  background-color: hsla(35, 86%, 55%, 1) !important;
 }
 
-.backgroundGrey{
-background-color: #D8D8D8;
+.backgroundGrey {
+  background-color: #d8d8d8;
 }
 
-.backgroundgreen{
-    background-color: #315951E5 !important;
+.backgroundgreen {
+  background-color: #315951e5 !important;
+}
+
+.formContainer {
+    width: 75% !important;
+    margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  .formContainer {
+    width: 100% !important;
+  }
 }
