pagination & filteration for projects

--- a/ProjectManagmentSystem/src/Modules/SharedModule/components/SideBar/sidebar.module.css
+++ b/ProjectManagmentSystem/src/Modules/SharedModule/components/SideBar/sidebar.module.css
@@ -13,8 +13,10 @@
   /* border-bottom: 1px #EF9B28 solid; */
   border-bottom: 1px #FFC107 solid;
 }
-
+/* 
 .height{
   height: 80px;
-}
+} */
+
+
 
