--- a/ProjectManagmentSystem/src/index.css
+++ b/ProjectManagmentSystem/src/index.css
@@ -23,6 +23,9 @@ p{
 w-40{
   width: 40%;
 }
+.w-nav{
+  width: 29%;
+}
 .text-main{
   color:#EF9B28 ;
 }
@@ -194,7 +197,7 @@ input:-webkit-autofill {
 select.center-text option {
   text-align: center;
 }
-/*? ========================>> Pagination <<============================*/
+/*? ========================>> End Pagination <<============================*/
 
 /*&===========================>> Buttons <<============================*/
 .orange-btn{
@@ -237,6 +240,17 @@ select.center-text option {
 .dropdown-menu{
   --bs-dropdown-font-size: .875rem;
   --bs-dropdown-item-padding-y: 0rem;
+  --bs-dropdown-item-padding-y: 0rem;
+}
+.dropdown-menu .dropdown-item{
+  transition: all 0.15s;
+  border-radius: 0px;
+}
+.dropdown-menu .dropdown-item:hover{
+  background-color: #fff;
+}
+.dropdown-menu .dropdown-item:active{
+  background-color: #fff;
 }
 .add-headers i{
   transition: all 0.15s;
@@ -245,7 +259,24 @@ select.center-text option {
 .add-headers i:hover{
   cursor: pointer;
 }
-/*&============================>>Buttons<<============================*/
+.filter-container .filter-icon{
+  /* top: 18%; */
+  right: 19%;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-top: 1.5px;
+  z-index: 1;
+  font-size: 12px;
+  /* background-color: #EF9B28; */
+}
+.filter-container .filter-select{
+  transition: all 0.15s ;
+}
+.filter-container .filter-select:hover{
+  cursor: pointer;
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+}
+/*&============================>>End Buttons<<============================*/
 
 /*?=======================>>NotFound<<============================  */
 .notfound-container h1,h2{
@@ -260,17 +291,51 @@ select.center-text option {
   width: 65%;
   
 }
-/*?=======================>>NotFound<<============================  */
- /* Small devices (landscape phones, 576px and up) */
-
-
+/*?=======================>>End NotFound<<============================  */
 
   .header-project{
-    background-color: #fff;
-  }
 
+    background-color: #fff;
+    background-image: linear-gradient(rgba(47, 140, 96, 0.5), rgba(0, 0, 0, 0.9)),url(./assets/images/tasks.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    & .title-project{
+      font-weight: 600;
+      color:#fff ;   
+      text-shadow: 0.5px 0.5px #000; 
+    }
+  }
+  .header-task{
+    background-color: #fff;
+    background-image: linear-gradient(rgba(47, 140, 96, 0.5), rgba(0, 0, 0, 0.9)),url(./assets/images/fortasks.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    /* background-size: 320px 200px; */
+    background-position: 0px 0px;
+    & .title-task{
+      font-weight: 600;
+      color:#fff ;   
+      text-shadow: 0.5px 0.5px #000; 
+    }
+    
+  }
   
+  .header-user{
+    background-color: #fff;
+    background-image: linear-gradient(rgba(47, 140, 96, 0.5), rgba(0, 0, 0, 0.8)),url(./assets/images/u1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    & .title-user{
+      font-weight: 600;
+      color:#fff ;   
+      text-shadow: 0.5px 0.5px #000; 
+    }
+  }
  /*? ****************************=========================================================================*******/
+ /* ?========================RESPONSIVE TABLE =========================================== */
  /*? ****************************=========================================================================*******/
  .responsive-table-categories {
   padding: 0;
@@ -280,6 +345,19 @@ select.center-text option {
     display: flex;
     justify-content: space-between;
     margin-bottom: 5px;
+  }
+  .dropdown-menu {
+    overflow: hidden;
+  }
+  .dropdown-menu li{
+    border-radius: 0;
+    padding: 5px 30px;
+    transition: all 0.15s;
+  }
+  .dropdown-menu li:hover{
+    cursor: pointer;
+    padding: 5px 30px;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
   }
   .table-header {
     padding: 20px 35px;
@@ -303,7 +381,7 @@ select.center-text option {
     align-items: center;
   }
   .col-1 {
-    flex-basis: 5%;
+    flex-basis: 10%;
     /* background-color: greenyellow; */
   }
   .col-2 {
@@ -311,7 +389,7 @@ select.center-text option {
     /* background-color: greenyellow; */
   }
   .col-3 {
-    flex-basis: 10%;
+    flex-basis: 15%;
     /* background-color: greenyellow; */
   }
   .col-4 {
@@ -354,25 +432,50 @@ select.center-text option {
 
 /*? ****************************=========================================================================*******/
  /*? ****************************=========================================================================*******/
-
-
-  /**=================================== Mobile */
+ 
+/**=================================== MobileScreen */
 @media (min-width: 576px) {  
   .ps-collapsed .ps-menu-button{
     padding-left: 24px !important;
     /* background-color: #DC3545; */
   }
+  
 }
-
- 
- /**=================================== Medium devices (tablets, 768px and up) */
+/**=================================== Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
   
   .header-project{
-    background-image: url(./assets/images/tasks.jpg);
+    background-image: url(./assets/images/complete.jpg);
     background-size: 200px 200px;
     background-position: 180px -40px;
     background-repeat: no-repeat; 
+    & .title-project{
+      font-weight: 600;
+      color: #000;
+      text-shadow: 0px 0px; 
+    }
+  }
+  .header-task{
+    background-image: url(./assets/images/fortasks.jpg);
+    background-size: 255px 212px;
+    background-position: 150px -10px;
+    background-repeat: no-repeat; 
+    & .title-task{
+      font-weight: 600;
+      color: #000;
+      text-shadow: 0px 0px; 
+    }
+  }
+  
+  .header-user{
+    background-image: url(./assets/images/u1.jpg);
+    background-size: 230px 100px;
+    background-position: 210px -3px;
+    background-repeat: no-repeat; 
+    & .title-user{
+      color: #000;
+      text-shadow: 0px 0px; 
+    }
   }
 
   .ps-collapsed .ps-menu-button{
@@ -392,7 +495,7 @@ select.center-text option {
 
  }
  
- /**============================== Large devices (desktops, 992px and up) */
+/**============================== Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
 
   
@@ -401,6 +504,19 @@ select.center-text option {
     background-repeat: no-repeat;
     background-size: 500px 500px;
 
+  }
+  .header-task{
+    background-size: 550px 340px;
+    background-position: 400px -25px;
+  }
+  /* .header-task{
+    background-size: 550px 400px;
+    background-position: 400px -72px;
+  } */
+
+  .header-user{
+    background-size: 320px 150px;
+    background-position: 510px -40px;
   }
 
   .notfound-container h1,h2{
