--- a/ProjectManagmentSystem/src/index.css
+++ b/ProjectManagmentSystem/src/index.css
@@ -134,4 +134,38 @@ input:-webkit-autofill {
 }
 
 
+/**  =====================================> DARK THEME <==================================== */
+
+/* NAVBAR */
+.dark .navber-darkmood {
+    background-color: #22303c !important;
+}
+
+
+.dark .dark-p {
+  color:white !important;
+  
+}
+.dark .dark-icon {
+  color: white !important;
+
+}
+/* HEADER MASTERLAYOUT */
+.dark .darkMood-MasterLayout {
+  background-color: #192734;
+}
+.dark .h2-dark {
+  color:#fff;
+}
+
+.dark .dark-tabel {
+    background-color: #22303c !important;
+}
+
+/* SIDEBAR */
+.dark .sidebar-container .ps-sidebar-container {
+      background-color: #15202b;
+    background-image: none;
+}
+
 
