--- a/ProjectManagmentSystem/src/Modules/DashboardModule/components/Dashboard/Dashboard.module.css
+++ b/ProjectManagmentSystem/src/Modules/DashboardModule/components/Dashboard/Dashboard.module.css
@@ -1,36 +1,40 @@
 .textGold {
-    color: hsla(35, 86%, 55%, 1);
+  color: hsla(35, 86%, 55%, 1);
 }
 .btnGold {
-    background-color: hsla(35, 86%, 55%, 1) !important;
+  background-color: hsla(35, 86%, 55%, 1) !important;
 }
-.headerContainer{
-    background-image: url(../../../../assets/images/home-bg.png);
-    background-size: cover;
-}
-
-.bgProgress{
-    background-color: #E5E6F4;
-}
-.bgTasks{
-    background-color: #F4F4E5;
-}
-.bgProjects{
-    background-color: #F4E5ED;
-}
-.bgProjectNoicon{
-    background-color:  #E7C3D7;
-}
-.bgProjectTaskicon{
-    background-color: #E4E4BC;
-}
-.bgProgressicon{
-    background-color: #CFD1EC;
+.headerContainer {
+  background-image: url(../../../../assets/images/home-bg.png);
+  background-size: cover;
 }
 
-.textPadding{
-    font-weight: 500!important;
-    font-size: 13px!important;
-    line-height: 15.73px!important;
-   
+.bgProgress {
+  background-color: #e5e6f4;
+}
+.bgTasks {
+  background-color: #f4f4e5;
+}
+.bgProjects {
+  background-color: #f4e5ed;
+}
+.bgProjectNoicon {
+  background-color: #e7c3d7;
+}
+.bgProjectTaskicon {
+  background-color: #e4e4bc;
+}
+.bgProgressicon {
+  background-color: #cfd1ec;
+}
+
+.textPadding {
+  font-weight: 500 !important;
+  font-size: 13px !important;
+  line-height: 15.73px !important;
+}
+
+.chart {
+  width: 50%;
+  margin: 0 auto;
 }
