--- a/ProjectManagmentSystem/src/Modules/AuthenticationModule/components/Login/Login.module.css
+++ b/ProjectManagmentSystem/src/Modules/AuthenticationModule/components/Login/Login.module.css
@@ -4,7 +4,7 @@
   }
   
   .content {
-    padding: 4rem;
+    /* padding: 4rem; */
     background-color: #315951e5;
     border-radius: 5px;
     color: #fff;
@@ -68,4 +68,20 @@
       color: #fff !important;
       width: 100%;
       border-radius: 20px !important;
+  }
+
+  .inputStyle{
+    border: 0;
+    border-bottom: 1px solid #DEE2E6;
+  }
+  
+  .inputContainer{
+    border-bottom: 1px #DEE2E6 solid;
+    /* background-color: red;
+    height: 60px; */
+  }
+  
+  .inputError{
+    /* border-bottom: 1px #EF9B28 solid; */
+    border-bottom: 1px #FFC107 solid;
   }
